removed comments code in css file, fixed the errors from validator

--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <!-- Meta tags for search engines -->
     <meta
       name="description"
       content="h2o Mineral Water. Product that helps you to be healthy..."
-    />
+    >
     <meta
       name="keywords"
       content="mienral water, water, drink, healthy product"
-    />
+    >
     <!-- Title -->
     <title>H&#8322;O Mineral Water</title>
     <!-- Favicon -->
@@ -20,22 +20,22 @@
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/favicon/apple-touch-icon.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="assets/favicon/favicon-32x32.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="site.webmanifest" />
+    >
+    <link rel="manifest" href="site.webmanifest" >
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" >
   </head>
 
   <body>
@@ -43,10 +43,10 @@
     <header>
       <div class="logo-container">
         <a href="index.html" class="nav-list">
-          <img src="assets/images/white-logo.png" alt="primary logo" />
+          <img src="assets/images/white-logo.png" alt="primary logo" >
         </a>
       </div>
-      <input type="checkbox" id="toggle-icon" class="toggle-icon" />
+      <input type="checkbox" id="toggle-icon" class="toggle-icon" >
       <label for="toggle-icon" class="label-toggle-icon"
         ><i class="fa-solid fa-bars hamburger"></i
       ></label>
@@ -67,7 +67,7 @@
     <!-- Main content -->
     <main class="contact-main">
       <div class="hero-container">
-        <section id="hero-image-contact"></section>
+        <div id="hero-image-contact"></div>
       </div>
       <div class="section-container">
         <section class="form-section">
@@ -77,23 +77,23 @@
             class="message-form"
           >
             <h1>Contact Us</h1>
-            <hr />
+            <hr>
             <label for="fname">Name *</label>
-            <input type="text" class="text-input" name="fname" id="fname" required />
+            <input type="text" class="text-input" name="fname" id="fname" required >
             <label for="email-address">Email Address *</label>
-            <input type="email" class="text-input" name="email-address" id="email-address" required />
+            <input type="email" class="text-input" name="email-address" id="email-address" required >
             <label for="phone-number">Phone *</label>
-            <input type="number" class="phone-input" name="phone-number" id="phone-number" required />
+            <input type="number" class="phone-input" name="phone-number" id="phone-number" required >
             <label for="subject">Subject</label>
-            <input type="text" class="subject-input" name="subject" id="subject" />
+            <input type="text" class="subject-input" name="subject" id="subject" >
             <label for="message-input">Message *</label>
             <textarea class="message-input" name="message-input" id="message-input" required></textarea>
-            <input type="submit" value="Submit Message" class="submit-button" />
+            <input type="submit" value="Submit Message" class="submit-button" >
           </form>
         </section>
         <section class="contact-section">
           <h2>H&#8322;O Mineral Water Company</h2>
-          <hr />
+          <hr>
           <p><strong>Schwarzau im Gebirge, Austria</strong></p>
           <p><strong>Phone:</strong> +43 1234567</p>
           <p><strong>Fax:</strong> +43 12345678</p>
