--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <!-- Meta tags for search engines -->
     <meta
       name="description"
       content="h2o Mineral Water. Product that helps you to be healthy..."
-    />
+    >
     <meta
       name="keywords"
       content="mienral water, water, drink, healthy product"
-    />
+    >
     <!-- Title -->
     <title>H&#8322;O Mineral Water</title>
     <!-- Favicon -->
@@ -20,32 +20,32 @@
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/favicon/apple-touch-icon.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="assets/favicon/favicon-32x32.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="/site.webmanifest" />
+    >
+    <link rel="manifest" href="/site.webmanifest" >
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" >
   </head>
   <body>
     <!-- Header -->
     <header>
       <div class="logo-container">
         <a href="index.html" class="nav-list">
-          <img src="assets/images/white-logo.png" alt="primary logo" />
+          <img src="assets/images/white-logo.png" alt="primary logo" >
         </a>
       </div>
-      <input type="checkbox" id="toggle-icon" class="toggle-icon" />
+      <input type="checkbox" id="toggle-icon" class="toggle-icon" >
       <label for="toggle-icon" class="label-toggle-icon"
         ><i class="fa-solid fa-bars hamburger"></i
       ></label>
@@ -67,7 +67,7 @@
     <!-- Main Content -->
     <main>
       <div class="hero-container">
-        <section id="hero-image"></section>
+        <div id="hero-image"></div>
       </div>
       <section class="text-container">
         <h1>
@@ -75,16 +75,16 @@
             src="assets/images/logo-black.png"
             alt="Logo in black color"
             class="black-logo"
-          />
+          >
           <strong>H<span class="subscript">2</span>O</strong> Mieral Water
         </h1>
-        <hr />
+        <hr>
         <div class="description">
           <img
             src="assets/images/alp-image.png"
             alt="alp image"
             class="alp-image"
-          />
+          >
           <p class="description-p">
             &emsp; Certainly! In the Austrian Alps, particularly in the region
             of Bad Gastein, you can find exceptional mineral water springs that
@@ -107,13 +107,13 @@
       </section>
       <section class="profit-water">
         <h3>Profit of drinking water</h3>
-        <hr />
+        <hr>
         <div class="description">
           <img
             src="assets/images/woman-drinking.png"
             alt="A woman is drinking water from the bottle"
             class="drinking-woman"
-          />
+          >
           <p class="profit-p">
             &emsp; Drinking mineral water is highly profitable for the human
             body. It naturally contains essential minerals like calcium,
@@ -131,13 +131,13 @@
       </section>
       <section class="products">
         <h3>Why you should try H&#8322;O</h3>
-        <hr />
+        <hr>
         <div class="description">
           <img
             src="assets/images/bottle.png"
             alt="Plastic bottle of H2O"
             class="plastic-bottle"
-          />
+          >
         
         <p class="home-third-section">
           &emsp; Our dedication to product quality is uncompromising, and we
@@ -167,7 +167,7 @@
             src="assets/images/kid-water.png"
             alt="Glass bottle of H2O"
             class="glass-bottle"
-          />
+          >
         </div>
       </section>
       <div class="go-top">
