--- a/products.html
+++ b/products.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <!-- Meta tags for search engines -->
     <meta
       name="description"
       content="h2o Mineral Water. Product that helps you to be healthy..."
-    />
+    >
     <meta
       name="keywords"
       content="mienral water, water, drink, healthy product"
-    />
+    >
     <!-- Title -->
     <title>H&#8322;O Mineral Water</title>
     <!-- Favicon -->
@@ -20,22 +20,22 @@
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/favicon/apple-touch-icon.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="assets/favicon/favicon-32x32.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="site.webmanifest" />
+    >
+    <link rel="manifest" href="site.webmanifest" >
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" >
   </head>
 
   <body>
@@ -43,10 +43,10 @@
     <header>
       <div class="logo-container">
         <a href="index.html" class="nav-list">
-          <img src="assets/images/white-logo.png" alt="primary logo" />
+          <img src="assets/images/white-logo.png" alt="primary logo" >
         </a>
       </div>
-      <input type="checkbox" id="toggle-icon" class="toggle-icon" />
+      <input type="checkbox" id="toggle-icon" class="toggle-icon" >
       <label for="toggle-icon" class="label-toggle-icon"
         ><i class="fa-solid fa-bars hamburger"></i
       ></label>
@@ -67,22 +67,22 @@
     <!-- Main content -->
     <main>
       <div class="hero-container">
-        <section id="hero-image-products"></section>
+        <div id="hero-image-products"></div>
       </div>
       <section class="products-container">
         <h1 class="products-header">Products</h1>
-        <hr />
+        <hr >
         <div class="products-image-container">
           <img
             src="assets/images/plastic-bottles.png"
             alt="This is a photo of plastic bottles of H2O Mineral Water"
             class="products-plastic-bottles-image"
-          />
+          >
           <img
             src="assets/images/glass.png"
             alt="Photo of a glass bottle of H2O Mineral Water"
             class="products-glass-image"
-          />
+          >
           <p class="products-description">
             &emsp;Unlike other mineral water providers, our primary focus is
             solely on packaging 0.5-liter bottles in separate forms. Alongside
@@ -97,12 +97,12 @@
       </section>
       <section class="quality-steps">
         <h1 class="quality-steps-header">Quality Steps</h1>
-        <hr />
+        <hr>
         <img
           src="assets/images/quality-steps.png"
           alt="This is steps of qualitize of mineral water"
           class="quality-steps-image"
-        />
+        >
         <p class="quality-steps-description">
           &emsp;Not just any water makes it into our bottles. Each and every
           drop of water has to exceed all sorts of federal, state, industry and
@@ -121,7 +121,7 @@
       </section>
       <section class="analyze">
         <h1 class="analyze-header">Analyze</h1>
-        <hr />
+        <hr>
         <h4>Our Secret Formula:</h4>
         <p>
           &emsp;Once the water is purified, we inject a specially formulated
