Removed number input arrow, add box shadow to texts in large screens, fixed some margins in large screens, align texts to justify to have the same ending of paragraphs

--- a/contact.html
+++ b/contact.html
@@ -94,11 +94,11 @@
         <section class="contact-section">
           <h2>H&#8322;O Mineral Water Company</h2>
           <hr>
-          <p><strong>Schwarzau im Gebirge, Austria</strong></p>
-          <p><strong>Phone:</strong> +43 1234567</p>
-          <p><strong>Fax:</strong> +43 12345678</p>
-          <p><strong>Email: </strong> contact@h2o.com</p>
-          <p><strong>Sales agency email: </strong>sales@h2o.com</p>
+          <p class="no-shadow"><strong>Schwarzau im Gebirge, Austria</strong></p>
+          <p class="no-shadow"><strong>Phone:</strong> +43 1234567</p>
+          <p class="no-shadow"><strong>Fax:</strong> +43 12345678</p>
+          <p class="no-shadow"><strong>Email: </strong> contact@h2o.com</p>
+          <p class="no-shadow sales-agency-lable"><strong class="sales-agency-lable">Sales agency email: </strong>sales@h2o.com</p>
         </section>
       </div>
     <div class="go-top">
