--- a/products.html
+++ b/products.html
@@ -123,7 +123,7 @@
         <h1 class="analyze-header">Analyze</h1>
         <hr>
         <h4>Our Secret Formula:</h4>
-        <p>
+        <p class="no-shadow">
           &emsp;Once the water is purified, we inject a specially formulated
           blend of minerals (calcium chloride, magnesium chloride, potassium
           bicarbonate and sodium chloride) that provides Culligan’s ultra-clean
@@ -172,11 +172,11 @@
           Each 250 ml glass of Culligan Water contains the following percent
           daily values based on a 2,000 calorie diet:
         </h4>
-        <p>Calories……………..<strong>0%</strong></p>
-        <p>Total Fat…………….<strong>0g / 0%</strong></p>
-        <p>Total Carbs………..<strong>0g / 0%</strong></p>
+        <p class="no-shadow">Calories……………..<strong>0%</strong></p>
+        <p class="no-shadow">Total Fat…………….<strong>0g / 0%</strong></p>
+        <p class="no-shadow">Total Carbs………..<strong>0g / 0%</strong></p>
         <h4>Water Quality Data</h4>
-        <p>
+        <p class="no-shadow">
           &emsp;See copy of our water quality analyses as conducted by certified
           labs. The analysis includes bottled drinking water quality test
           results for substances including inorganic, organics, and radiological
