Changed the twitter icon to X

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             <a href="products.html" class="nav-list">Products</a>
           </li>
           <li class="list-menu active">
-            <a href="contact.html" class="nav-list">Contact</a>
+            <a href="contact.html" class="nav-list">Contact Us</a>
           </li>
         </ul>
       </nav>
@@ -114,8 +114,7 @@
             href="http://twitter.com/"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
+            ><i class="fa-brands fa-x-twitter"></i></a>
         </li>
         <li>
           <a
