--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="products.html" class="nav-list">Products</a>
           </li>
           <li class="list-menu">
-            <a href="contact.html" class="nav-list">Contact</a>
+            <a href="contact.html" class="nav-list">Contact Us</a>
           </li>
         </ul>
       </nav>
@@ -185,8 +185,7 @@
             href="http://twitter.com/"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
+            ><i class="fa-brands fa-x-twitter"></i></a>
         </li>
         <li>
           <a
