--- a/products.html
+++ b/products.html
@@ -59,7 +59,7 @@
             <a href="products.html" class="nav-list">Products</a>
           </li>
           <li class="list-menu">
-            <a href="contact.html" class="nav-list">Contact</a>
+            <a href="contact.html" class="nav-list">Contact Us</a>
           </li>
         </ul>
       </nav>
@@ -120,7 +120,7 @@
         </p>
       </section>
       <section class="analyze">
-        <h1 class="analyze-header">Analyze</h1>
+        <h1 class="analyze-header">Analysis</h1>
         <hr>
         <h4>Our Secret Formula:</h4>
         <p class="no-shadow">
@@ -196,8 +196,7 @@
             href="http://twitter.com/"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
+            ><i class="fa-brands fa-x-twitter"></i></a>
         </li>
         <li>
           <a
