Add landing image to home page

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Meta tags for search engines -->
     <meta
       name="description"
       content="h2o Mineral Water. Product that helps you to be healthy..."
-    >
+    />
     <meta
       name="keywords"
       content="mienral water, water, drink, healthy product"
-    >
+    />
     <!-- Title -->
     <title>H&#8322;O Mineral Water</title>
     <!-- Favicon -->
@@ -20,32 +20,32 @@
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/favicon/apple-touch-icon.png"
-    >
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="assets/favicon/favicon-32x32.png"
-    >
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
-    >
-    <link rel="manifest" href="/site.webmanifest" >
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" >
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
       <div class="logo-container">
         <a href="index.html" class="nav-list">
-          <img src="assets/images/white-logo.png" alt="primary logo" >
+          <img src="assets/images/white-logo.png" alt="primary logo" />
         </a>
       </div>
-      <input type="checkbox" id="toggle-icon" class="toggle-icon" >
+      <input type="checkbox" id="toggle-icon" class="toggle-icon" />
       <label for="toggle-icon" class="label-toggle-icon"
         ><i class="fa-solid fa-bars hamburger"></i
       ></label>
@@ -69,22 +69,28 @@
       <div class="hero-container">
         <div id="hero-image"></div>
       </div>
+      <div class="landing-image-container">
+        <div class="slogan">
+          <p class="slogan-text">Purity, Quality, Life</p>
+        </div>
+        <div class="landing-image"></div>
+      </div>
       <section class="text-container">
         <h1>
           <img
             src="assets/images/logo-black.png"
             alt="Logo in black color"
             class="black-logo"
-          >
+          />
           <strong>H<span class="subscript">2</span>O</strong> Mieral Water
         </h1>
-        <hr>
+        <hr />
         <div class="description">
           <img
             src="assets/images/alp-image.png"
             alt="alp image"
             class="alp-image"
-          >
+          />
           <p class="description-p">
             &emsp; Certainly! In the Austrian Alps, particularly in the region
             of Bad Gastein, you can find exceptional mineral water springs that
@@ -107,13 +113,13 @@
       </section>
       <section class="profit-water">
         <h3>Profit of drinking water</h3>
-        <hr>
+        <hr />
         <div class="description">
           <img
             src="assets/images/woman-drinking.png"
             alt="A woman is drinking water from the bottle"
             class="drinking-woman"
-          >
+          />
           <p class="profit-p">
             &emsp; Drinking mineral water is highly profitable for the human
             body. It naturally contains essential minerals like calcium,
@@ -131,43 +137,43 @@
       </section>
       <section class="products">
         <h3>Why you should try H&#8322;O</h3>
-        <hr>
+        <hr />
         <div class="description">
           <img
             src="assets/images/bottle.png"
             alt="Plastic bottle of H2O"
             class="plastic-bottle"
-          >
-        
-        <p class="home-third-section">
-          &emsp; Our dedication to product quality is uncompromising, and we
-          take multiple meticulous steps to guarantee the excellence of our
-          bottled water. Each drop of water we use undergoes rigorous testing
-          and filtration processes to not only meet but exceed federal, state,
-          industry, and company standards. Microbiological standards ensure that
-          our water is free from harmful bacteria and pathogens. We employ
-          cutting-edge filtration and purification methods to guarantee the
-          absence of contaminants. Physical standards are met through constant
-          monitoring of water clarity, color, and turbidity. Our water is
-          crystal clear and visually pristine. Chemical standards are adhered to
-          by testing for the presence of any undesirable chemicals or
-          impurities. We use advanced technologies to ensure that our water is
-          free from any chemical substances that could compromise its purity and
-          safety. Radiological standards are closely monitored to guarantee that
-          our bottled water is entirely free from any radiation or radioactive
-          substances. By strictly adhering to state, federal, and industry
-          bottled water quality standards, we not only ensure that every bottle
-          we deliver to your home or office is safe to drink but also
-          consistently maintains its exceptional taste. The result is bottled
-          water that always delivers a crisp and refreshing experience with
-          every sip.
-        </p>
-        
+          />
+
+          <p class="home-third-section">
+            &emsp; Our dedication to product quality is uncompromising, and we
+            take multiple meticulous steps to guarantee the excellence of our
+            bottled water. Each drop of water we use undergoes rigorous testing
+            and filtration processes to not only meet but exceed federal, state,
+            industry, and company standards. Microbiological standards ensure
+            that our water is free from harmful bacteria and pathogens. We
+            employ cutting-edge filtration and purification methods to guarantee
+            the absence of contaminants. Physical standards are met through
+            constant monitoring of water clarity, color, and turbidity. Our
+            water is crystal clear and visually pristine. Chemical standards are
+            adhered to by testing for the presence of any undesirable chemicals
+            or impurities. We use advanced technologies to ensure that our water
+            is free from any chemical substances that could compromise its
+            purity and safety. Radiological standards are closely monitored to
+            guarantee that our bottled water is entirely free from any radiation
+            or radioactive substances. By strictly adhering to state, federal,
+            and industry bottled water quality standards, we not only ensure
+            that every bottle we deliver to your home or office is safe to drink
+            but also consistently maintains its exceptional taste. The result is
+            bottled water that always delivers a crisp and refreshing experience
+            with every sip.
+          </p>
+
           <img
             src="assets/images/kid-water.png"
             alt="Glass bottle of H2O"
             class="glass-bottle"
-          >
+          />
         </div>
       </section>
       <div class="go-top">
@@ -185,7 +191,8 @@
             href="http://twitter.com/"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fa-brands fa-x-twitter"></i></a>
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
         </li>
         <li>
           <a
