Fixed vocab and grammer

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             alt="Logo in black color"
             class="black-logo"
           />
-          <strong>H<span class="subscript">2</span>O</strong> Mieral Water
+          <strong>H<span class="subscript">2</span>O</strong> Mineral Water
         </h1>
         <hr />
         <div class="description">
@@ -112,7 +112,7 @@
         </div>
       </section>
       <section class="profit-water">
-        <h3>Profit of drinking water</h3>
+        <h3>Benefits of drinking water</h3>
         <hr />
         <div class="description">
           <img
