Removed the unused images from the folder

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </a>
       </div>
       <input type="checkbox" id="toggle-icon" class="toggle-icon" />
-      <label for="toggle-icon" class="label-toggle-icon"
-        ><i class="fa-solid fa-bars hamburger"></i
-      ></label>
+      <label for="toggle-icon" class="label-toggle-icon">
+        <i class="fa-solid fa-bars hamburger"></i>
+      </label>
       <nav class="navbar">
         <ul id="menu" class="menu">
           <li class="list-menu active">
@@ -177,9 +177,9 @@
         </div>
       </section>
       <div class="go-top">
-        <a href="#" class="go-top-button"
-          ><i class="fa-solid fa-angle-up top-icon"></i
-        ></a>
+        <a href="#" class="go-top-button">
+          <i class="fa-solid fa-angle-up top-icon"></i>
+        </a>
       </div>
     </main>
 
@@ -191,32 +191,36 @@
             href="http://twitter.com/"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fa-brands fa-x-twitter"></i
-          ></a>
+          >
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
         </li>
         <li>
           <a
             href="http://youtube.com/"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fa-brands fa-youtube"></i
-          ></a>
+          >
+            <i class="fa-brands fa-youtube"></i>
+          </a>
         </li>
         <li>
           <a
             href="http://facebook.com/"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fa-brands fa-facebook"></i
-          ></a>
+          >
+            <i class="fa-brands fa-facebook"></i>
+          </a>
         </li>
         <li>
           <a
             href="http://instagram.com/"
             target="_blank"
             rel="noopener noreferrer"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
         </li>
       </ul>
     </footer>
