Change png images to webp to perform better

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <hr />
         <div class="description">
           <img
-            src="assets/images/alp-image.png"
+            src="assets/images/alp-image.webp"
             alt="alp image"
             class="alp-image"
           />
@@ -116,7 +116,7 @@
         <hr />
         <div class="description">
           <img
-            src="assets/images/woman-drinking.png"
+            src="assets/images/woman-drinking.webp"
             alt="A woman is drinking water from the bottle"
             class="drinking-woman"
           />
@@ -140,7 +140,7 @@
         <hr />
         <div class="description">
           <img
-            src="assets/images/bottle.png"
+            src="assets/images/bottle.webp"
             alt="Plastic bottle of H2O"
             class="plastic-bottle"
           />
@@ -170,7 +170,7 @@
           </p>
 
           <img
-            src="assets/images/kid-water.png"
+            src="assets/images/kid-water.webp"
             alt="Glass bottle of H2O"
             class="glass-bottle"
           />
