--- a/products.html
+++ b/products.html
@@ -74,12 +74,12 @@
         <hr >
         <div class="products-image-container">
           <img
-            src="assets/images/plastic-bottles.png"
+            src="assets/images/plastic-bottles.webp"
             alt="This is a photo of plastic bottles of H2O Mineral Water"
             class="products-plastic-bottles-image"
           >
           <img
-            src="assets/images/glass.png"
+            src="assets/images/glass.webp"
             alt="Photo of a glass bottle of H2O Mineral Water"
             class="products-glass-image"
           >
@@ -99,7 +99,7 @@
         <h1 class="quality-steps-header">Quality Steps</h1>
         <hr>
         <img
-          src="assets/images/quality-steps.png"
+          src="assets/images/quality-steps.webp"
           alt="This is steps of qualitize of mineral water"
           class="quality-steps-image"
         >
